--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,3 +1,4 @@
-matthias-mehdi.kaddour
-louis.ledoux
-yanis.coper
+Matthias-Mehdi Kaddour <matthias-mehdi.kaddour@epita.fr>
+Louis Ledoux <louis.ledoux@epita.fr>
+Yanis Coper <yanis.coper@epita.fr>
+Guillaume-Alain Priso Totto <guillaume-alain.priso-totto@epita.fr>
